--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://crimson-ai.github.io/backend-api-learning"
+		"url": "https://github.com/crimson-ai/backend-api-learning"
 	}
 }
