--- a/package.json
+++ b/package.json
@@ -2,8 +2,17 @@
 	"name": "fcc-learn-npm-package-json",
 	"author": "Karim",
 	"description": "Learning backend and API dev.",
+	"keywords": [
+		"descriptive",
+		"related",
+		"words",
+		"freecodecamp"
+	],
+	"license": "MIT",
+	"version": "1.0.0",
 	"dependencies": {
-		"express": "^4.14.0"
+		"express": "^4.14.0",
+		"moment": "~2.10.2"
 	},
 	"main": "server.js",
 	"scripts": {
